Resolve spacing/template issues with home layout to align search bar with content.

--- a/ckanext/open_alberta/sass/ab-opengov.scss
+++ b/ckanext/open_alberta/sass/ab-opengov.scss
@@ -160,7 +160,6 @@ $light-border-color: #a0a0a0;
         }
 
         .search {
-            margin-left: -15px;
 
             input {
                 border: 1px solid #ccc;
